--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">UbrainiansTest</string>
-    <string name="first_app">First App</string>
-    <string name="second_app">Second App</string>
+    <string name="geonames_app">Geonames App</string>
+    <string name="download_app">Download App</string>
     <string name="third_app">Third App</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_home">Home</string>
